# control_simulator

./: .gitignore  .gitmodules  Dockerfile  Jenkinsfile  Jenkinsfile_TODO  README.md  build_plugins.sh  buildserver.Dockerfile  docker-compose-single.yml  docker-compose.yml  entrypoint.sh  expose_host.sh  makefile
catkin_ws/: buildserverDockerfile
catkin_ws/src/mocap_node/: CMakeLists.txt  package.xml
catkin_ws/src/obstacle_publisher/: CMakeLists.txt  package.xml
catkin_ws/src/simulator_utils/: CMakeLists.txt  package.xml
components/: builder_entrypoint.sh  computer.dockerfile  computer_entrypoint.sh  gzserver.dockerfile  gzserver_entrypoint.sh  px4.dockerfile  px4_entrypoint.sh
components/simulator_utils/src/plugins/: CMakeLists.txt
computer/: Dockerfile
dockerfiles/: gzserver.dockerfile  gzweb.dockerfile  jenkins.dockerfile  px4.dockerfile
gzresources/: setup.sh
gzresources/worlds/: enemy_drone.world  full_nowalls.world  full_world.world  iris_vs_static_obstacles.world  multiple_iris.world  single_world.world  testing.world
gzserver/: Dockerfile
gzweb/: Dockerfile  README.md
onboard_computer/: Dockerfile
px4/: Dockerfile  Dockerfile-with-px4io
scripts/: build_images.sh  builder_entrypoint.sh  clone_external_projects.sh  expose_host.sh  get_docker_network_ip.py  get_docker_network_offboard_ip.py  get_upload_tag.sh  install_gzweb.sh  install_gzweb_deps.sh  make_iris.sh  make_single_iris.sh  mavros.rosinstall  rosinstall.mavros  start_pc_node.sh  test.json
src/control_simulator/: CMakeLists.txt  package.xml
src/simulator_utils/: CMakeLists.txt
(+85 files in other folders)
